--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <div class="card"></div>
+    <div class="card">Loading...</div>
     <script src="js/main.js"></script>
   </body>
 </html>
